# pp_termproj

./: .gitignore  .gitlab-ci.yml  Bubblebobble_Termproject_28.sln  CMakeLists.txt  README.md  build.sh  buildscript2.bat  configure_temp.js  main.cpp  msvc_build.bat  run  run_program.bat
Bubblebobble_Termproject_28/: Bubblebobble_Termproject_28.vcxproj  Bubblebobble_Termproject_28.vcxproj.filters  resource.h  run.cpp
Bubblebobble_Termproject_28/include/: BaseObject.h  Board.h  Bubble.h  Cannon.h  Light.h  Material.h  Settings.h  Texts.h  Texture.h  VisualBoard.h  resource.h
Bubblebobble_Termproject_28/src/: BaseObject.cpp  Board.cpp  Bubble.cpp  Cannon.cpp  Light.cpp  Material.cpp  Texture.cpp  TimeBar.cpp  VisualBoard.cpp  run.cpp
ab/: ab.sln
ab/Debug/: ab.ilk
ab/Release/: ab.iobj  ab.ipdb
ab/ab/: BaseObject.cpp  BaseObject.h  Board.cpp  Board.h  Bubble.cpp  Bubble.h  Cannon.cpp  Cannon.h  Light.cpp  Light.h  Material.cpp  Material.h  Settings.h  Texts.cpp  Texts.h  TimeBar.cpp  TimeBar.h  VisualBoard.cpp  VisualBoard.h  ab.aps  ab.vcxproj  ab.vcxproj.filters  resource.h  ╝╥╜║.cpp  소스.cpp
ab/ab/Debug/: vc142.idb
ab/ab/Debug/ab.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ab.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
ab/ab/Release/ab.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ab.lastbuildstate  ab.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  (+1 more)
docs/: sketch.yuml
include/: BaseObject.h  Board.h  Bubble.h  Cannon.h  Light.h  Material.h  Settings.h  Texts.h  TimeBar.h  VisualBoard.h
src/: BaseObject.cpp  Board.cpp  Bubble.cpp  Cannon.cpp  Light.cpp  Material.cpp  Texts.cpp  TimeBar.cpp  VisualBoard.cpp  run.cpp  run.cpp.old
